syntax = "proto3";
package orderproto;
option go_package = "github.com/p40pmn/golang-grpc/proto;orderproto";


message Product {
string id = 1;
string name = 2;
int32 price = 3; 
}


message ListProductsRequest {repeated string ids = 1;}
message ListProductsResponse { repeated Product products = 1; }
message GetProductRequest { string id = 1; }
message GetProductResponse { Product product = 1; }

message CreateProductRequest { Product product = 1; }
message CreateProductResponse { Product product = 1; }


message CreateOrderRequest {
string user_id = 1;
repeated string product_ids = 2;
}
message CreateOrderResponse {
string order_id = 1;
int32 total = 2; 
string status = 3;
}
message GetOrderRequest { string order_id = 1; }
message GetOrderResponse {
string order_id = 1;
string user_id = 2;
repeated Product products = 3;
int32 total = 4;
string status = 5;
}


message ChargeRequest { string order_id = 1; int32 amount = 2; }
message ChargeResponse { bool success = 1; string transaction_id = 2; }


service ProductService {
rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
rpc GetProduct(GetProductRequest) returns (GetProductResponse);
rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
}


service PaymentService {
rpc Charge(ChargeRequest) returns (ChargeResponse);
}


service OrderService {
rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}